不需要的代码删除